syntax = "proto3";
package irismod.record;

import "gogoproto/gogo.proto";
import "irismod/record/record.proto";

option go_package = "irismod.io/record/types";

// GenesisState defines the record module's genesis state
message GenesisState {
  repeated Record records = 1 [ (gogoproto.nullable) = false ];
}
